# panopticon-protocol-v3

./: .gitignore  COLAB_SECURITY_V5_TRAINING.md  Dockerfile  FINAL_SUBMISSION_BLUEPRINT.md  GOOGLE_DRIVE_OWNERSHIP_TRANSFER_COLAB.md  HACKATHON_PROMPT.md  HF_SPACE_README.md  INTERVIEW_BLUEPRINT.md  LICENSE  PITCH_SCRIPT.md  Panopticon_Explained.md  Panopticon_Plots_Colab.ipynb  Panopticon_Protocol_v3_Training_Demo.ipynb  Panopticon_TRL_Training.ipynb  Panopticon_Training_FINAL.ipynb  Panopticon_V6_Research_Colab.ipynb  README.md  Top_10_Hackathon_Finale_Ideas.md  Top_10_Transportation_Ideas.md  ULTIMATE_IDEATION_PROMPT.md  _server.py  argus_llm.py  benchmark_acceptance.py  benchmark_suite.py  blog.md  client.py  e2e_verify.py  environment.py  evaluation_comparison_latest.json  evaluation_snapshot_apr26.json  full_evaluation.py  generate_benchmark_snapshot_plots.py  generate_evaluation_plots.py  generate_latest_evaluation_comparison.py  generate_plots.py  generate_prepost_comparison.py  generate_security_v5_summary_plots.py  generate_security_v5_training_plots.py  grader.py  gym_wrapper.py  (+25 more)
.github/workflows/: research-artifact.yml
panopticon_bench/: README.md  __init__.py  adapters.py  metrics.py  runner.py  schemas.py  seed_plan.py  taxonomy.py
panopticon_bench/scenarios/: delayed_canary_exfiltration.json  tool_approval_boundary.json
plots/: training_statistics.json  training_statistics.md
research_paper/: .gitignore  CITATION.cff  COLAB_V6_BEGINNER_RUNBOOK.md  MANIFEST.md  README.md  RESEARCH_STATUS.md
research_paper/checklists/: author_contributions.md  submission_checklist.md
research_paper/data/: training_seed_ledger.drive_verified.json  training_seed_ledger.reconstructed.json
research_paper/paper/: ABSTRACT_AND_TITLE_OPTIONS.md  author_metadata.tex  main.tex  references.bib  references_security.bib  supplementary.tex
research_paper/protocols/: ablation_plan.md  claim_evidence_matrix.csv  data_management_plan.md  dataset_card.md  (+11 more)
server/: __init__.py  app.py
static/: index.html
tasks/: __init__.py  easy.py  hard.py  level_4.py  level_5.py  medium.py
tests/: test_packaging_contract.py  test_panopticon_bench.py  test_research_validity.py  test_server_hardening.py
training_results/: training_data.json
ui/: index.html  package-lock.json  package.json
(+71 files in other folders)
